Added contact no

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <p>
         <img class="logo" src="logo.png" id="logo">
         <br>
-        <strong class="footer_text">Just one Life by Dr. Mehul Shanghvi </strong> 
+        <strong class="footer_text">Just one Life by Dr. Mehul Shanghvi </strong> <br>
+        Contact now : +91 88793 66908
       </p>
     </div>
   </footer>
